List.of doesn't serialize correctly, change TypeReference to List